--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/css/style.css"> 
 </head>
 <body>
-    <h1>Lista de Productos</h1>
-    <ul>
-        {{#each products}}
-            <li>{{this.title}} - {{this.description}}</li>
-        {{/each}}
-    </ul>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/realtimeproducts">Real-Time Products</a></li>
+              
+            </ul>
+        </nav>
+    </header>
+
+    {{{body}}} 
+
+    <footer>
+        <p></p>
+    </footer>
+
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
