--- a/views/realTimeProducts.handlebars
+++ b/views/realTimeProducts.handlebars
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Productos en Tiempo Real</title>
+    <link rel="stylesheet" href="/css/style.css">
     <script src="/socket.io/socket.io.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
